// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationRepositories render() with a provider renders 1`] = `
<OrganizationRepositories
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <DocumentTitle
    title="Repositories"
  >
    <div>
      <div
        className="pull-right"
      >
        <DropdownLink
          anchorRight={true}
          caret={true}
          className="btn btn-primary btn-sm"
          disabled={false}
          keepMenuOpen={false}
          title="Add Repository"
        >
          <span
            className="dropdown pull-right anchor-right open"
          >
            <a
              className="dropdown-actor btn btn-primary btn-sm dropdown-menu-right dropdown-toggle"
              onClick={[Function]}
            >
              Add Repository
              <i
                className="icon-arrow-down"
              />
            </a>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <MenuItem
                noAnchor={true}
              >
                <li
                  className=""
                  href={null}
                  role="presentation"
                  title={null}
                >
                  <AddRepositoryLink
                    onSuccess={[Function]}
                    orgId="org-slug"
                    provider={
                      Object {
                        "config": Array [
                          Object {
                            "help": "Enter your repository name, including the owner.",
                            "label": "Repository Name",
                            "name": "name",
                            "placeholder": "e.g. getsentry/sentry",
                            "required": true,
                            "type": "text",
                          },
                        ],
                        "id": "github",
                        "name": "GitHub",
                      }
                    }
                  >
                    <a
                      onClick={[Function]}
                    >
                      GitHub
                      <Modal
                        animation={false}
                        autoFocus={true}
                        backdrop={true}
                        bsClass="modal"
                        dialogComponentClass={[Function]}
                        enforceFocus={true}
                        keyboard={true}
                        manager={
                          ModalManager {
                            "containers": Array [],
                            "data": Array [],
                            "handleContainerOverflow": true,
                            "hideSiblingNodes": true,
                            "modals": Array [],
                          }
                        }
                        onHide={[Function]}
                        renderBackdrop={[Function]}
                        restoreFocus={true}
                        show={false}
                      >
                        <Modal
                          autoFocus={true}
                          backdrop={true}
                          backdropClassName="modal-backdrop"
                          backdropTransitionTimeout={150}
                          containerClassName="modal-open"
                          dialogTransitionTimeout={300}
                          enforceFocus={true}
                          keyboard={true}
                          manager={
                            ModalManager {
                              "containers": Array [],
                              "data": Array [],
                              "handleContainerOverflow": true,
                              "hideSiblingNodes": true,
                              "modals": Array [],
                            }
                          }
                          onEntering={[Function]}
                          onExited={[Function]}
                          onHide={[Function]}
                          renderBackdrop={[Function]}
                          restoreFocus={true}
                          show={false}
                        />
                      </Modal>
                    </a>
                  </AddRepositoryLink>
                </li>
              </MenuItem>
            </ul>
          </span>
        </DropdownLink>
      </div>
      <h3
        className="m-b-2"
      >
        Repositories
      </h3>
      <div
        className="well blankslate align-center p-x-2 p-y-1"
      >
        <div
          className="icon icon-lg icon-git-commit"
        />
        <h3>
          Sentry is better with commit data
        </h3>
        <p>
          Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
        </p>
        <p
          className="m-b-1"
        >
          <a
            className="btn btn-default"
            href="https://docs.sentry.io/learn/releases/"
          >
            Learn more
          </a>
        </p>
      </div>
    </div>
  </DocumentTitle>
</OrganizationRepositories>
`;

exports[`OrganizationRepositories render() with a provider renders with a repository 1`] = `
<OrganizationRepositories
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <DocumentTitle
    title="Repositories"
  >
    <div>
      <div
        className="pull-right"
      >
        <DropdownLink
          anchorRight={true}
          caret={true}
          className="btn btn-primary btn-sm"
          disabled={false}
          keepMenuOpen={false}
          title="Add Repository"
        >
          <span
            className="dropdown pull-right anchor-right open"
          >
            <a
              className="dropdown-actor btn btn-primary btn-sm dropdown-menu-right dropdown-toggle"
              onClick={[Function]}
            >
              Add Repository
              <i
                className="icon-arrow-down"
              />
            </a>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <MenuItem
                noAnchor={true}
              >
                <li
                  className=""
                  href={null}
                  role="presentation"
                  title={null}
                >
                  <AddRepositoryLink
                    onSuccess={[Function]}
                    orgId="org-slug"
                    provider={
                      Object {
                        "config": Array [
                          Object {
                            "help": "Enter your repository name, including the owner.",
                            "label": "Repository Name",
                            "name": "name",
                            "placeholder": "e.g. getsentry/sentry",
                            "required": true,
                            "type": "text",
                          },
                        ],
                        "id": "github",
                        "name": "GitHub",
                      }
                    }
                  >
                    <a
                      onClick={[Function]}
                    >
                      GitHub
                      <Modal
                        animation={false}
                        autoFocus={true}
                        backdrop={true}
                        bsClass="modal"
                        dialogComponentClass={[Function]}
                        enforceFocus={true}
                        keyboard={true}
                        manager={
                          ModalManager {
                            "containers": Array [],
                            "data": Array [],
                            "handleContainerOverflow": true,
                            "hideSiblingNodes": true,
                            "modals": Array [],
                          }
                        }
                        onHide={[Function]}
                        renderBackdrop={[Function]}
                        restoreFocus={true}
                        show={false}
                      >
                        <Modal
                          autoFocus={true}
                          backdrop={true}
                          backdropClassName="modal-backdrop"
                          backdropTransitionTimeout={150}
                          containerClassName="modal-open"
                          dialogTransitionTimeout={300}
                          enforceFocus={true}
                          keyboard={true}
                          manager={
                            ModalManager {
                              "containers": Array [],
                              "data": Array [],
                              "handleContainerOverflow": true,
                              "hideSiblingNodes": true,
                              "modals": Array [],
                            }
                          }
                          onEntering={[Function]}
                          onExited={[Function]}
                          onHide={[Function]}
                          renderBackdrop={[Function]}
                          restoreFocus={true}
                          show={false}
                        />
                      </Modal>
                    </a>
                  </AddRepositoryLink>
                </li>
              </MenuItem>
            </ul>
          </span>
        </DropdownLink>
      </div>
      <h3
        className="m-b-2"
      >
        Repositories
      </h3>
      <div
        className="m-b-2"
      >
        <p>
          Connecting a repository allows Sentry to capture commit data via webhooks. This enables features like suggested assignees and resolving issues via commit message. Once you've connected a repository, you can associate commits with releases via the API.
           
          <span>
            <span>
              See our 
            </span>
            <a
              href="https://docs.sentry.io/learn/releases/"
            >
              <span>
                documentation
              </span>
            </a>
            <span>
               for more details.
            </span>
          </span>
        </p>
      </div>
      <div
        className="panel panel-default"
      >
        <table
          className="table"
        >
          <tbody>
            <tr>
              <td>
                <strong>
                  repo-name
                </strong>
                <br />
                <small />
                <small>
                   
                  — 
                  <a
                    href="https://github.com/example/repo-name"
                  >
                    https://github.com/example/repo-name
                  </a>
                </small>
              </td>
              <td
                style={
                  Object {
                    "width": 60,
                  }
                }
              >
                <Confirm
                  cancelText="Cancel"
                  confirmText="Confirm"
                  disabled={false}
                  message="Are you sure you want to remove this repository?"
                  onConfirm={[Function]}
                  priority="primary"
                >
                  <span>
                    <Button
                      disabled={false}
                      onClick={[Function]}
                      size="xsmall"
                    >
                      <button
                        className="button button-default button-xs"
                        disabled={false}
                        onClick={[Function]}
                        role="button"
                      >
                        <FlowLayout
                          truncate={false}
                        >
                          <div
                            className="flow-layout"
                          >
                            <span
                              className="button-label"
                            >
                              <span
                                className="icon icon-trash"
                              />
                            </span>
                          </div>
                        </FlowLayout>
                      </button>
                    </Button>
                    <Modal
                      animation={false}
                      autoFocus={true}
                      backdrop={true}
                      bsClass="modal"
                      dialogComponentClass={[Function]}
                      enforceFocus={true}
                      keyboard={true}
                      manager={
                        ModalManager {
                          "containers": Array [],
                          "data": Array [],
                          "handleContainerOverflow": true,
                          "hideSiblingNodes": true,
                          "modals": Array [],
                        }
                      }
                      onHide={[Function]}
                      renderBackdrop={[Function]}
                      restoreFocus={true}
                      show={false}
                    >
                      <Modal
                        autoFocus={true}
                        backdrop={true}
                        backdropClassName="modal-backdrop"
                        backdropTransitionTimeout={150}
                        containerClassName="modal-open"
                        dialogTransitionTimeout={300}
                        enforceFocus={true}
                        keyboard={true}
                        manager={
                          ModalManager {
                            "containers": Array [],
                            "data": Array [],
                            "handleContainerOverflow": true,
                            "hideSiblingNodes": true,
                            "modals": Array [],
                          }
                        }
                        onEntering={[Function]}
                        onExited={[Function]}
                        onHide={[Function]}
                        renderBackdrop={[Function]}
                        restoreFocus={true}
                        show={false}
                      />
                    </Modal>
                  </span>
                </Confirm>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </DocumentTitle>
</OrganizationRepositories>
`;

exports[`OrganizationRepositories render() without any providers is loading when initially rendering 1`] = `
<DocumentTitle
  title="Repositories"
>
  <div>
    <div
      className="pull-right"
    >
      <DropdownLink
        anchorRight={true}
        caret={true}
        className="btn btn-primary btn-sm"
        disabled={false}
        keepMenuOpen={false}
        title="Add Repository"
      />
    </div>
    <h3
      className="m-b-2"
    >
      Repositories
    </h3>
    <div
      className="well blankslate align-center p-x-2 p-y-1"
    >
      <div
        className="icon icon-lg icon-git-commit"
      />
      <h3>
        Sentry is better with commit data
      </h3>
      <p>
        Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
      </p>
      <p
        className="m-b-1"
      >
        <a
          className="btn btn-default"
          href="https://docs.sentry.io/learn/releases/"
        >
          Learn more
        </a>
      </p>
    </div>
  </div>
</DocumentTitle>
`;

exports[`OrganizationRepositories render() without any providers renders 1`] = `
<OrganizationRepositories
  params={
    Object {
      "orgId": "org-slug",
    }
  }
>
  <DocumentTitle
    title="Repositories"
  >
    <div>
      <div
        className="pull-right"
      >
        <DropdownLink
          anchorRight={true}
          caret={true}
          className="btn btn-primary btn-sm"
          disabled={false}
          keepMenuOpen={false}
          title="Add Repository"
        >
          <span
            className="dropdown pull-right anchor-right open"
          >
            <a
              className="dropdown-actor btn btn-primary btn-sm dropdown-menu-right dropdown-toggle"
              onClick={[Function]}
            >
              Add Repository
              <i
                className="icon-arrow-down"
              />
            </a>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            />
          </span>
        </DropdownLink>
      </div>
      <h3
        className="m-b-2"
      >
        Repositories
      </h3>
      <div
        className="well blankslate align-center p-x-2 p-y-1"
      >
        <div
          className="icon icon-lg icon-git-commit"
        />
        <h3>
          Sentry is better with commit data
        </h3>
        <p>
          Adding one or more repositories will enable enhanced releases and the ability to resolve Sentry Issues via git message.
        </p>
        <p
          className="m-b-1"
        >
          <a
            className="btn btn-default"
            href="https://docs.sentry.io/learn/releases/"
          >
            Learn more
          </a>
        </p>
      </div>
    </div>
  </DocumentTitle>
</OrganizationRepositories>
`;
